testing Cors fix